--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.24'
 
       - name: Install super from specific SHA
         run: |
-          go install github.com/brimdata/super@${{ github.event.inputs.sha_ref }}
+          go install github.com/brimdata/super/cmd/super@${{ github.event.inputs.sha_ref }}
 
       - name: Verify installation
         run: |
