Don't gen release notes
No code in this rep to gen from. :)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,4 +75,4 @@ jobs:
           files: |
             super-${{ github.event.inputs.version }}-linux-amd64/super-${{ github.event.inputs.version }}-linux-amd64
             super-${{ github.event.inputs.version }}-darwin-amd64/super-${{ github.event.inputs.version }}-darwin-amd64
-          generate_release_notes: true
+          generate_release_notes: false
